--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
           <img src="inst377.jpg" alt="Engineer">
           <h3 id = "description">
           Searching for oppurtunities to advance my
-          technical skills in software engineering and data science.</h3>
+          technical skills in software engineering and data science. My goals are to
+        get a security clearance and work for a government contractor.</h3>
         </div>
+        <br>
+        <h9>Work Experience</h9>
+        <br>
         <div id = "history">
           <h4>Booz Allen Hamilton Summer Games Intern</h4>
           <h5>June 2019 - August 2019</h5>
