--- a/lab3.html
+++ b/lab3.html
@@ -27,10 +27,10 @@
       font-weight: 400;
     }
 
-    wrapper {
+    .wrapper {
       width: 60%;
-      height: 100vh;
-      width: 22vh;
+      height: 100%;
+      width: 22%;
       background: grey;
     }
 
