--- a/lab3.html
+++ b/lab3.html
@@ -10,8 +10,8 @@
       width: 480px;
     }
 
-    .container {
-      background-color: purple;
+    body {
+      body: purple;
       margin: 0;
     }
 
