--- a/lab3.html
+++ b/lab3.html
@@ -11,7 +11,7 @@
     }
 
     body {
-      body: purple;
+      background-color: purple;
       margin: 0;
     }
 
@@ -23,14 +23,12 @@
 
     newsline {
       font-size: 42px;
-      font-style: bold;
       font-weight: 400;
     }
 
     .wrapper {
       width: 60%;
       height: 100%;
-      width: 22%;
       background: grey;
     }
 
