--- a/lab3.html
+++ b/lab3.html
@@ -1,4 +1,10 @@
-doc {
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Sample HTML Demonstration Page</title>
+  <style>
+    doc {
       background: green;
       height: 960px;
       width: 480px;
@@ -40,7 +46,7 @@ doc {
     }
 
     second_container {
-      background: pink;
+      background-color: pink;
       height: 150px;
     }
 
@@ -61,10 +67,40 @@ doc {
     }
 
     .green {
-      background: red;
+      background-color: red;
       cursor: pointer;
     }
 
     .second {
       background: lightblue;
     }
+  </style>
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="head" id="start">
+      make me a headline
+    </div>
+    <div class="second_container">
+      <div class="interior">
+      hello
+    </div>
+    </div>
+    <div class="container">
+      <div>
+        First
+      </div>
+      <div>
+        Second
+      </div>
+      <div class="second textbox">
+        <p>
+          Third
+        </p>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
