--- a/lab3.html
+++ b/lab3.html
@@ -11,11 +11,11 @@
     }
 
     body {
-      background-color: purple;
-      margin: 0;
+      background-color: grey;
+      margin: 60;
     }
 
-    div {
+    .div {
       color: red;
       width: 100px;
       height: 42px;
@@ -45,7 +45,7 @@
       padding: 0;
     }
 
-    second_container {
+    .second_container {
       background-color: pink;
       height: 150px;
     }
@@ -55,9 +55,10 @@
       justify-content: space-around;
       align-items: center;
       flex-wrap: wrap;
+      background-color:red;
     }
 
-    textbox {
+    .secondtextbox {
       height: 100px;
       width: 350px;
       margin-bottom: 25px;
@@ -65,13 +66,7 @@
       align-items: center;
       justify-content: center
     }
-
-    .green {
-      background-color: red;
-      cursor: pointer;
-    }
-
-    .second {
+    .secondtextbox {
       background: lightblue;
     }
   </style>
@@ -94,7 +89,7 @@
       <div>
         Second
       </div>
-      <div class="second textbox">
+      <div class="secondtextbox">
         <p>
           Third
         </p>
